<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectionActtivity">


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tblSelection"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/draw_bg_gender_tabs"
        android:focusable="false"
        android:scrollbars="horizontal"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:tabGravity="fill"
        app:tabIndicator="@drawable/draw_bg_selected_gender_tabs"
        app:tabIndicatorColor="@color/white"
        app:tabIndicatorGravity="stretch"
        app:tabMode="fixed"
        app:tabRippleColor="@null"
        app:tabSelectedTextColor="@color/black"
        app:tabTextColor="@color/black"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:text="@string/Machanic" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/client" />

    </com.google.android.material.tabs.TabLayout>

    <Button
        android:id="@+id/btnLogin"
        style="@style/Button.primary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/login"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSignUp"
        app:layout_constraintStart_toStartOf="@+id/tblSelection"
        app:layout_constraintTop_toBottomOf="@+id/tblSelection" />

    <Button
        android:id="@+id/btnSignUp"
        style="@style/Button.primary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/signup"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/btnLogin"
        app:layout_constraintBottom_toBottomOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="@+id/tblSelection"
        app:layout_constraintTop_toTopOf="@+id/btnLogin"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>